Fixed broken CSS re: small screens
index.scss
- set all `<a>` tags to have underlines for better accessibility
- removed ALL `from_left_to_right` transitions, as this was breaking the
site on smaller screens by reserving space for hidden text that wouldn't
be triggered until `:hover` was active
- transition on `:hover` is now fade-in/fade-out rather than slide-in/
slide-out

index.html
- removed the all instances of `from_left_to_right` class

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,6 +23,10 @@ h3 {
   margin-top: 1rem;
 }
 
+a {
+  text-decoration: underline;
+}
+
 p {
   font-family: "Ubuntu", sans-serif;
 
@@ -250,35 +254,6 @@ section {
 }
 .projects.effect a:hover p {
   visibility: visible;
-}
-
-.projects.effect.from_left_and_right .info h3 {
-  -webkit-transform: translateX(-100%);
-  -moz-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  -o-transform: translateX(-100%);
-  transform: translateX(-100%);
-}
-.projects.effect.from_left_and_right .info p {
-  -webkit-transform: translateX(100%);
-  -moz-transform: translateX(100%);
-  -ms-transform: translateX(100%);
-  -o-transform: translateX(100%);
-  transform: translateX(100%);
-}
-.projects.effect.from_left_and_right a:hover h3 {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-.projects.effect.from_left_and_right a:hover p {
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
 }
 
 .section-head {
